# CoastSat

./: .gitignore  MANIFEST.in  NARRA.kml  Objectif.md  README.md  README_ROCKY_COASTLINE.md  SDS_download.py  SDS_preprocess.py  SDS_shoreline.py  SDS_tools.py  SDS_transects.py  SETE.kml  Workflow_example.md  __int__.py  authenticate.py  environment.txt  environment.yml  example.py  example_jupyter.ipynb  example_jupyter_Criel.ipynb  example_jupyter_SOULAC.ipynb  main.py  main_jupyter.ipynb  main_spyder.py  main_test.py  polygon.kml  polygon_ANNA.kml  pyproject.toml  requirements.txt  requirements_linux64.txt  requirements_win64.txt  setup.cfg  setup.py  shoreline_extraction.ipynb  test.py  test_spyder_advanced.py  test_spyder_simple.py  train_classifier.ipynb  train_classifier.py  train_new_classifier.ipynb  (+1 more)
.github/: FUNDING.yml
classification/: train_new_classifier.ipynb
classifiers/: NN_4classes_Landsat.pkl  NN_4classes_Landsat_20191122.pkl  NN_4classes_Landsat_bright.pkl  NN_4classes_Landsat_dark.pkl  NN_4classes_S2.pkl  NN_4classes_nopan.pkl  NN_4classes_withpan.pkl  train_new_classifier.ipynb  train_new_classifier.md
coastsat/: SDS_classify.py  SDS_download.py  SDS_preprocess.py  SDS_shoreline.py  SDS_slope.py  SDS_slopes.py  SDS_split_download.py  SDS_tools.py  SDS_transects.py
doc/: FES2022_setup.md  train_new_classifier.md
examples/: NARRA_output.pkl  NARRA_tides.csv  NARRA_time_series_tidally_corrected.csv  NARRA_transects.geojson  NARRA_transects.kml
requirements/: requirements_osx64.txt
tide_model_clipping/: clip_FES2022_files.ipynb  (+1 more)
(+25 files in other folders)
