[metadata]
name = coastsat
description = obtain time-series of shoreline position at any coastline worldwide
url = https://github.com/kvos/CoastSat
long_description_content_type = text/markdown
long_description = file: README.md
license = GPL-3
license_file = LICENSE

[options]
zip_safe = True
include_package_data = True
install_requires =
    pandas >=0.20.3
    astropy
    gdal ==2.3.3
    earthengine-api ==0.1.236
    geopandas ==0.4.1
    matplotlib
    numpy
    pandas ==0.24.2
    pytz
    scikit-image
    scikit-learn
    scipy
    shapely
    joblib

python_requires = >=3.7
packages = find:

[sdist]
formats = gztar
